--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2127,7 +2127,7 @@ input:-webkit-autofill::first-line {
     
     .swiss-security-badge {
         margin-top: 1rem;
-        margin-bottom: 2rem;
+        margin-bottom: 5rem;
         padding: 0.5rem 1rem;
     }
     
